--- a/package.json
+++ b/package.json
@@ -1,11 +1,23 @@
 {
   "scripts": {
-    "dev": "nodemon ./src/index.js",
-    "start": "node ./src/index.js"
+    "lint": "eslint .",
+    "start": "npm run build && node dist/index.js",
+    "build": "rm -rf dist && mkdir dist && babel src -s -d dist",
+    "dev": "env-cmd -f .env.local --fallback nodemon --exec babel-node src/index.js"
   },
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.22.2",
+    "@hapi/joi": "^17.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-validator": "^7.0.1"
+    "express-validator": "^7.0.1",
+    "mongoose": "^7.2.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.22.1",
+    "@babel/node": "^7.22.1",
+    "@babel/preset-env": "^7.22.2",
+    "@babel/register": "^7.21.0",
+    "env-cmd": "^10.1.0"
   }
 }
