--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.22.2",
     "@hapi/joi": "^17.1.1",
+    "cookie": "^0.5.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
-    "mongoose": "^7.2.1"
+    "js-cookie": "^3.0.5",
+    "mongoose": "^7.2.1",
+    "socket.io": "^4.6.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.1",
