--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@babel/plugin-transform-runtime": "^7.22.2",
     "@hapi/joi": "^17.1.1",
     "cookie": "^0.5.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
