--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.22.2",
     "@hapi/joi": "^17.1.1",
+    "body-parser": "^1.20.2",
     "cookie": "^0.5.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
