--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "lint": "eslint .",
     "start": "npm run build && node dist/index.js",
-    "build": "rm -rf dist && mkdir dist && npm i -g babel && babel src -s -d dist",
+    "build": "rm -rf dist && mkdir dist && npm i -g babel-cli && babel src -s -d dist",
     "dev": "env-cmd -f .env.local --fallback nodemon --exec babel-node src/index.js"
   },
   "dependencies": {
