--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "scripts": {
     "lint": "eslint .",
     "start": "npm run build && node dist/index.js",
-    "build": "rm -rf dist && mkdir dist && npm uninstall babel babel-cli && npm i -g @babel/cli @babel/core && babel src -s -d dist",
+    "build": "rm -rf dist && mkdir dist && npm i -g @babel/cli @babel/core && babel src -s -d dist",
     "dev": "env-cmd -f .env.local --fallback nodemon --exec babel-node src/index.js"
   },
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.22.2",
+    "@babel/preset-env": "^7.22.5",
     "@hapi/joi": "^17.1.1",
     "body-parser": "^1.20.2",
     "cookie": "^0.5.0",
@@ -24,7 +25,6 @@
     "@babel/cli": "^7.22.5",
     "@babel/core": "^7.22.1",
     "@babel/node": "^7.22.1",
-    "@babel/preset-env": "^7.22.5",
     "@babel/register": "^7.21.0",
     "env-cmd": "^10.1.0"
   },
