--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "scripts": {
     "lint": "eslint .",
-    "start": "npm run build && node dist/index.js",
-    "build": "rm -rf dist && mkdir dist && npm i -g @babel/cli @babel/core && babel src -s -d dist",
+    "start": "export $(xargs < .env) && node dist/index.js",
+    "build": "rm -rf dist && mkdir dist && babel src -s -d dist",
     "dev": "env-cmd -f .env.local --fallback nodemon --exec babel-node src/index.js"
   },
   "dependencies": {
@@ -14,6 +14,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "env-cmd": "^10.1.0",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "js-cookie": "^3.0.5",
@@ -25,8 +26,7 @@
     "@babel/cli": "^7.22.5",
     "@babel/core": "^7.22.1",
     "@babel/node": "^7.22.1",
-    "@babel/register": "^7.21.0",
-    "env-cmd": "^10.1.0"
+    "@babel/register": "^7.21.0"
   },
   "engines": {
     "node": ">=14.20.1"
