--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "lint": "eslint .",
-    "start": "export $(xargs < .env) && node dist/index.js",
+    "start": "export $(xargs < .env) && npm i @babel/cli @babel/core && node dist/index.js",
     "build": "rm -rf dist && mkdir dist && babel src -s -d dist",
     "dev": "env-cmd -f .env.local --fallback nodemon --exec babel-node src/index.js"
   },
