--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "scripts": {
     "lint": "eslint .",
-    "start": "export $(xargs < .env) && npm i @babel/cli @babel/core && node dist/index.js",
-    "build": "rm -rf dist && mkdir dist && babel src -s -d dist",
+    "start": "export $(xargs < .env) && node dist/index.js",
+    "build": "rm -rf dist && mkdir dist && npm i @babel/cli @babel/core && babel src -s -d dist",
     "dev": "env-cmd -f .env.local --fallback nodemon --exec babel-node src/index.js"
   },
   "dependencies": {
