--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "dotenv": "^16.0.3",
     "env-cmd": "^10.1.0",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "express-validator": "^7.0.1",
     "js-cookie": "^3.0.5",
     "mongoose": "^7.2.1",
+    "redis": "^4.6.7",
     "socket.io": "^4.6.1",
     "uuid": "^9.0.0"
   },
