--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "lint": "eslint .",
     "start": "export $(xargs < .env) && node dist/index.js",
     "build": "rm -rf dist && mkdir dist && npm i -g @babel/cli @babel/core && babel src -s -d dist",
-    "dev": "env-cmd -f .env.local --fallback nodemon --exec babel-node src/index.js"
+    "dev": "env-cmd -f .env.local --fallback nodemon --ignore static/ --exec babel-node src/index.js"
   },
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.22.2",
