--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "scripts": {
     "lint": "eslint .",
     "start": "export $(xargs < .env) && node dist/index.js",
-    "build": "rm -rf dist && mkdir dist && npm i -g @babel/cli @babel/core && babel src -s -d dist",
-    "dev": "env-cmd -f .env.local --fallback nodemon --ignore static/ --exec babel-node src/index.js"
+    "build": "rm -rf dist tmp && mkdir dist && npm i -g @babel/cli @babel/core && babel src -s -d dist",
+    "dev": "rm -rf tmp abc && env-cmd -f .env.local --fallback nodemon --ignore static/ --exec babel-node src/index.js"
   },
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.22.2",
     "@babel/preset-env": "^7.22.5",
     "@hapi/joi": "^17.1.1",
     "body-parser": "^1.20.2",
+    "cloudinary": "^1.37.3",
     "cookie": "^0.5.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
