--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "env-cmd": "^10.1.0",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "express-rate-limit": "^7.1.1",
     "express-validator": "^7.0.1",
     "js-cookie": "^3.0.5",
     "mongoose": "^7.2.1",
