--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-validator": "^7.0.1",
     "js-cookie": "^3.0.5",
     "mongoose": "^7.2.1",
+    "openai": "^4.29.2",
     "redis": "^4.6.7",
     "socket.io": "^4.6.1",
     "uuid": "^9.0.0"
